# graxia-os

./: .antigravityrules  .coderabbit.yaml  .cursorrules  .env.cpx11.template  .env.example  .env.graxia  .env.production.template  .env.quant_os  .env.quant_os.example  .env.staging  .gitignore  .graxiaignore  .instructions.md  .pre-commit-config.yaml  .vercelignore  .windsurfrules  AGENTS.md  AGENT_IMPLEMENTATION_GUIDE.md  ANTIGRAVITY.md  CLAUDE.md  Dockerfile  FULL_AUTO_LOAD_SETUP_GUIDE.md  FULL_AUTO_LOAD_SYSTEM_READY.md  GEMINI.md  GUARANTEE_REPORT.md  MT5_ACCOUNT_REDACTED  Makefile  PHASE_2_FRONTEND_SPEC.md  README.md  ROTATE_SECRETS.md  SKILLS_GATEWAY.md  SKILLS_GATEWAY_COMPLETE.md  agent.md  contacts.sample.json  debug_connectivity.py  dev.ps1  dev.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.supabase.yml  (+17 more)
.envs/: README.md
.github/: CODEOWNERS
backend/: .dockerignore  .env.flyio-template  CSRF_FIX_DEPLOYMENT.md  Dockerfile  Dockerfile.worker  OPERATIONAL_RUNBOOK.md  SKILLSMP_INTEGRATION_GUIDE.md  TASK_1.2_COMPLETION_REPORT.md  TASK_2.1_DEPLOYMENT.md  TASK_2.3_DEPLOYMENT.md  TASK_2.3_QUICK_REFERENCE.md  TASK_2.5_DEPLOYMENT.md  WEBHOOK_HMAC_DEPLOYMENT.md  alembic.ini  celerybeat-schedule  check_meta.py  fix_phase0.py  fly.toml  fly.worker.toml  init_viewing_db.py  openapi.json  pytest.ini  railway.toml  requirements.txt  seed_real_user.py  sitecustomize.py  skills_api_gateway.py  test_scrapers.py
config/: Dockerfile.graxia  Dockerfile.quant  Dockerfile.unified  README.md  docker-compose.brutal.yml  docker-compose.dev.yml  docker-compose.production.yml  ecosystem.config.js  netlify.toml  pyproject.toml  pytest.ini  redis.conf  requirements.quant.txt  requirements.unified.txt
core/: config.py  exceptions.py  logger.py  monitoring.py  orchestrator.py  security.py  telemetry.py
dashboard/: style.css
data/: execution_ledger.jsonl  heartbeat.txt  kill_switch_state.json
deploy/: Caddyfile  (+3 more)
(+1957 files in other folders)
