[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "graxia"
version = "1.0.0"
description = "Graxia Enterprise Revenue OS — AgentMesh Integration"
requires-python = ">=3.11"
dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # ── Database ─────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",           # async PostgreSQL driver
    "alembic>=1.13.0",           # migrations

    # ── Celery & messaging ───────────────────────────────────────────────────
    "celery[redis]>=5.4.0",
    "kombu>=5.3.0",              # Celery's messaging library
    "redis>=5.2.0",              # result backend

    # ── HTTP client (email delivery) ─────────────────────────────────────────
    "httpx>=0.27.0",

    # ── Validation ───────────────────────────────────────────────────────────
    "pydantic[email]>=2.7.0",

    # ── Payments ─────────────────────────────────────────────────────────────
    "stripe>=9.0.0",

    # ── Observability & Rate Limiting ────────────────────────────────────────
    "prometheus-client>=0.20.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",             # TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["graxia*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
